Fix the issue that buttons are out of place

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -128,7 +128,8 @@ h2 {
 }
 
 a.button {
-    margin: 20px 20px;
+    display: block;
+    margin: 30px 0;
     padding: 1em 4em;
     background-color: transparent;
     border: 2px solid white;
@@ -397,6 +398,11 @@ footer>p {
     
     p {
         font-size: 18px;
+    }
+
+    a.button{
+        display: inline-block;
+        margin: 30px 30px;
     }
 }
 
